--- a/templates/base.html
+++ b/templates/base.html
@@ -42,8 +42,8 @@
 
 <body class="index-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid container-xl position-relative d-flex align-items-center">
+  <header id="header" class="header d-flex align-items-center sticky-top">
+    <div class="container-fluid container-xl position-absolute d-flex align-items-center">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
@@ -53,7 +53,32 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="{% url 'home' %}">Home</a></li>
+          {% if user.is_authenticated %}
+          <li><a href="{% url 'new-post' %}">Add Post</a></li>
+
+            <li class="dropdown"><a href="#">{{user.username}} <span><i class="bi bi-caret-down-fill"></i></span></a>
+              <ul>
+                <li>
+                  <form id="logout-form" action="{% url 'logout' %}" method="post">
+                    {% csrf_token %}
+                    <a href="" onclick="document.getElementById('logout-form').submit(); return false">Logout</a>
+                  </form>
+                </li>
+                <li><a href="{% url 'password_change' %}">Change Password</a></li>
+                <li><a href="{% url 'password_reset' %}">Reset Password</a></li>
+              </ul>
+            </li>
+            
+          {% else %}
+          <li class="dropdown"><a href="">User <span><i class="bi bi-caret-down-fill"></i></span></a>
+            <ul>
+              <li><a href="{% url 'login' %}">Login</a></li>
+              <li><a href="{% url 'signup' %}">Signup</a></li>
+            </ul>
+          </li>
+            
+          {% endif %}
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
