--- a/templates/home.html
+++ b/templates/home.html
@@ -6,22 +6,11 @@
 {% block content %}
 
     <!-- Page Title -->
-    <div class="page-title">
-        <div class="heading">
-          <div class="container">
-            <div class="row d-flex justify-content-center text-center">
-              <div class="col-lg-8">
-                <h1>Blog</h1>
-                <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="page-title">
         <nav class="breadcrumbs">
           <div class="container">
             <ol>
-              <li><a href="index.html">Home</a></li>
-              <li class="current">Blog</li>
+              <li class="current">Home</li>
             </ol>
           </div>
         </nav>
@@ -34,138 +23,105 @@
   
             <!-- Blog Posts Section -->
             <section id="blog-posts" class="blog-posts section">
+              {% if post_list %}
+                {% for post in post_list %}
+                  <div class="container">
   
-              <div class="container">
-  
-                <div class="row gy-4">
+                  <div class="row gy-4">
   
                   <div class="col-12">
                     <article>
   
                       <div class="post-img">
-                        <img src="{% static 'assets/img/blog/blog-1.jpg' %}" alt="" class="img-fluid">
+                        <img src="{{ post.photo.url }}" alt="" class="img-fluid">
                       </div>
   
                       <h2 class="title">
-                        <a href="blog-details.html">Dolorum optio tempore voluptas dignissimos cumque fuga qui quibusdam quia</a>
+                        <a href="{% url 'post-detail' post.pk %}">{{post.title}}</a>
                       </h2>
   
                       <div class="meta-top">
                         <ul>
-                          <li class="d-flex align-items-center"><i class="bi bi-person"></i> <a href="blog-details.html">John Doe</a></li>
-                          <li class="d-flex align-items-center"><i class="bi bi-clock"></i> <a href="blog-details.html"><time datetime="2022-01-01">Jan 1, 2022</time></a></li>
+                          <li class="d-flex align-items-center"><i class="bi bi-person"></i> <a href="blog-details.html">{{post.author}}</a></li>
+                          <li class="d-flex align-items-center"><i class="bi bi-clock"></i> <a href="blog-details.html"><time datetime="2022-01-01">{{post.date}}</time></a></li>
                           <li class="d-flex align-items-center"><i class="bi bi-chat-dots"></i> <a href="blog-details.html">12 Comments</a></li>
                         </ul>
                       </div>
   
                       <div class="content">
                         <p>
-                          Similique neque nam consequuntur ad non maxime aliquam quas. Quibusdam animi praesentium. Aliquam et laboriosam eius aut nostrum quidem aliquid dicta.
-                          Et eveniet enim. Qui velit est ea dolorem doloremque deleniti aperiam unde soluta. Est cum et quod quos aut ut et sit sunt. Voluptate porro consequatur assumenda perferendis dolore.
+                          {{post.excerpt}}
                         </p>
   
                         <div class="read-more">
-                          <a href="blog-details.html">Read More</a>
+                          <a href="{% url 'post-detail' post.pk %}">Read More</a>
                         </div>
                       </div>
   
                     </article>
                   </div><!-- End post list item -->
 
-                </div><!-- End blog posts list -->
+                  </div><!-- End blog posts list -->
   
-              </div>
+                  </div>
+                {% endfor %}
+                </section><!-- /Blog Posts Section -->
   
-            </section><!-- /Blog Posts Section -->
+                <!-- Blog Pagination Section -->
+                {% if post_list.has_other_pages %}
+                  <section id="blog-pagination" class="blog-pagination section">
   
-            <!-- Blog Pagination Section -->
-            <section id="blog-pagination" class="blog-pagination section">
-  
-              <div class="container">
-                <div class="d-flex justify-content-center">
-                  <ul>
-                    <li><a href="#"><i class="bi bi-chevron-left"></i></a></li>
-                    <li><a href="#" class="active">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li>...</li>
-                    <li><a href="#">10</a></li>
-                    <li><a href="#"><i class="bi bi-chevron-right"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-  
-            </section><!-- /Blog Pagination Section -->
+                      <div class="container">
+                        <div class="d-flex justify-content-center">
+                          <ul>
+
+                            {% if post_list.has_previous %}
+                              <li class="page-item">
+                                <a href="?page={{post_list.previous_page_number}}">&laquo;</a>
+                              </li>
+                            {% else %}
+                              <li class="page-item disabled">
+                                <a class="page-link">&laquo;</a>
+                              </li>
+                            {% endif %}
+
+
+                            {% for i in post_list.paginator.page_range %}
+                              {% if post_list.number == i %}
+                                <li class="page-item active">
+                                  <a class="page-link">{{i}}</a>
+                                </li>
+                              {% else %}
+                                <li class="page-item">
+                                  <a href="?page={{i}}" class="page-link">{{i}}</a>
+                                </li>
+                              {% endif %}
+                            {% endfor %}
+
+
+                            {% if post_list.has_next %}
+                              <li class="page-item">
+                                <a href="?page={{post_list.next_page_number}}">&raquo;</a>
+                              </li>
+                            {% else %}
+                              <li class="page-item disabled">
+                                <a class="page-link">&raquo;</a>
+                              </li>
+                            {% endif %}
+                          </ul>
+                        </div>
+                      </div>
+                  </section><!-- /Blog Pagination Section -->
+                {% endif %}
+              {% else %}
+              <h2>There is no post here.</h2>
+              {% endif %}
   
           </div>
   
           <div class="col-lg-4 sidebar">
   
-            <div class="widgets-container">
-  
-              <!-- Search Widget -->
-              <div class="search-widget widget-item">
-  
-                <h3 class="widget-title">Search</h3>
-                <form action="">
-                  <input type="text">
-                  <button type="submit" title="Search"><i class="bi bi-search"></i></button>
-                </form>
-  
-              </div><!--/Search Widget -->
-  
-              <!-- Categories Widget -->
-              <div class="categories-widget widget-item">
-  
-                <h3 class="widget-title">Categories</h3>
-                <ul class="mt-3">
-                  <li><a href="#">General <span>(25)</span></a></li>
-                  <li><a href="#">Lifestyle <span>(12)</span></a></li>
-                  <li><a href="#">Travel <span>(5)</span></a></li>
-                  <li><a href="#">Design <span>(22)</span></a></li>
-                  <li><a href="#">Creative <span>(8)</span></a></li>
-                  <li><a href="#">Educaion <span>(14)</span></a></li>
-                </ul>
-  
-              </div><!--/Categories Widget -->
-  
-              <!-- Recent Posts Widget -->
-              <div class="recent-posts-widget widget-item">
-  
-                <h3 class="widget-title">Recent Posts</h3>
-  
-                <div class="post-item">
-                  <img src="{% static 'assets/img/blog/blog-recent-1.jpg' %}" alt="" class="flex-shrink-0">
-                  <div>
-                    <h4><a href="blog-details.html">Nihil blanditiis at in nihil autem</a></h4>
-                    <time datetime="2020-01-01">Jan 1, 2020</time>
-                  </div>
-                </div><!-- End recent post item-->
-  
-              </div><!--/Recent Posts Widget -->
-  
-              <!-- Tags Widget -->
-              <div class="tags-widget widget-item">
-  
-                <h3 class="widget-title">Tags</h3>
-                <ul>
-                  <li><a href="#">App</a></li>
-                  <li><a href="#">IT</a></li>
-                  <li><a href="#">Business</a></li>
-                  <li><a href="#">Mac</a></li>
-                  <li><a href="#">Design</a></li>
-                  <li><a href="#">Office</a></li>
-                  <li><a href="#">Creative</a></li>
-                  <li><a href="#">Studio</a></li>
-                  <li><a href="#">Smart</a></li>
-                  <li><a href="#">Tips</a></li>
-                  <li><a href="#">Marketing</a></li>
-                </ul>
-  
-              </div><!--/Tags Widget -->
-  
-            </div>
+            {% include 'sidebar.html' %}
   
           </div>
   
